--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
     "flux": "^2.1.1",
     "history": "^1.17.0",
     "lodash": "^4.14.2",
